--- a/CMPS350_Project/post.html
+++ b/CMPS350_Project/post.html
@@ -5,20 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post</title>
 </head>
-<body>
+<body style="background-color: rgba(198, 145, 219, 0.84);">
     <header>
-        <a href="profile.html">
-            <img src="" alt="user"> 
+        <a href="profile.html" style="color: black; text-decoration: none;">
+            <img src="/CMPS350_Project/images/prof1.png" alt="user" width="10%" style="border-radius: 3rem;">
+             username
         </a>
     </header>
     <main>
-        <section>
+        <section id="post">
 
         </section>
-        <section>
-
-        </section>
-        <section>
+        <section id="comment">
 
         </section>
     </main>
@@ -27,17 +25,17 @@
             <tr>
                 <td>
                     <a href="">
-                        <img src="" alt="settings">
+                        <img src="/images/settings.png" alt="settings" width="50%">
                     </a>
                 </td>
                 <td>
                     <a href="">
-                        <img src="" alt="post">
+                        <img src="/images/add.png" alt="post" width="50%">
                     </a>
                 </td>
                 <td>
                     <a href="feed.html">
-                        <img src="" alt="home">
+                        <img src="/images/home.png" alt="home" width="50%">
                     </a>
                 </td>
         
