tranfserd prof1 to images folder

--- a/CMPS350_Project/post.html
+++ b/CMPS350_Project/post.html
@@ -8,7 +8,7 @@
 <body style="background-color: rgba(198, 145, 219, 0.84);">
     <header>
         <a href="profile.html" style="color: black; text-decoration: none;">
-            <img src="/CMPS350_Project/images/prof1.png" alt="user" width="10%" style="border-radius: 3rem;">
+            <img src="\images\prof1.png" alt="user" width="10%" style="border-radius: 3rem;">
              username
         </a>
     </header>
