--- a/CMPS350_Project/profile.html
+++ b/CMPS350_Project/profile.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<image src="images\prof1.png" class="circle-img" width="10">
+<image src="\images\prof1.png" class="circle-img" width="10">
 <h4>Username</h4>
 
 <p>Followers</p>
