--- a/CMPS350_Project/post.html
+++ b/CMPS350_Project/post.html
@@ -16,8 +16,18 @@
         <section id="post">
 
         </section>
-        <section id="comment">
 
+        <section id="display-comment">
+            <h4>Comments</h4>
+
+
+        </section>
+
+        <section id="submit-comment">
+            <input type="text" id="comment" name="comment" placeholder="comment ...">
+            <button type="submit">
+                
+            </button>
         </section>
     </main>
     <footer>
