--- a/CMPS350_Project/post.html
+++ b/CMPS350_Project/post.html
@@ -18,16 +18,22 @@
         </section>
 
         <section id="display-comment">
-            <h4>Comments</h4>
+            <h5>Comments</h5>
 
+            <div id="comments-container">
+
+
+            </div>
 
         </section>
 
         <section id="submit-comment">
-            <input type="text" id="comment" name="comment" placeholder="comment ...">
-            <button type="submit">
-                
-            </button>
+            <form id="comment-here">
+                <input type="text" id="comment" name="comment" placeholder="comment here ..." style="border-radius: 3rem; border: none;">
+                    <button type="submit" style="border-radius: 3rem; width: 2rem; background:none; border:none; cursor:pointer;">
+                        <img src="/images/submit-comment.png" alt="submit" width="20rem">
+                    </button>
+            </form>
         </section>
     </main>
     <footer>
