--- a/CMPS350_Project/post.html
+++ b/CMPS350_Project/post.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post</title>
+    <link rel="stylesheet" href="styles/global.css">
 </head>
 <script src="comment.js"></script>
 <body style="background-color: rgba(198, 145, 219, 0.84);">
